[package]
name = "synapse-rpc"
description = "RPC data structures used by synapse"
version = "0.1.21"
authors = ["Luminarys <postmaster@gensok.io>"]
license = "ISC"
repository = "https://github.com/Luminarys/synapse"

[lib]
name = "synapse_rpc"

[features]
default = []

[dependencies]
regex = "1.5.4"
serde = "1.0.135"
serde_derive = "1.0.135"
serde_json = "1.0.78"
url = { version = "2.2.2", features = ["serde"] }
thread_local = "1.1.4"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock", "serde"]
